@@ -113,42 +113,6 @@ rsvg_size_callback (int *width,
 		}
 }
 
-static GdkPixbuf *
-rsvg_pixbuf_from_file_with_size_data_ex (RsvgHandle * handle,
-										 const gchar * file_name,
-										 struct RsvgSizeCallbackData * data,
-										 GError ** error)
-{
-	GdkPixbuf *retval;
-	gchar *base_uri;
-	GByteArray *f;
-
-	base_uri = rsvg_get_base_uri_from_filename(file_name);
-	f = _rsvg_acquire_xlink_href_resource (file_name, base_uri, error);
-
-	if (f)
-		{
-			rsvg_handle_set_base_uri (handle, base_uri);
-
-			rsvg_handle_set_size_callback (handle, rsvg_size_callback, data, NULL);
-			
-			rsvg_handle_write (handle, f->data, f->len, error);
-			
-			rsvg_handle_close (handle, error);
-			retval = rsvg_handle_get_pixbuf (handle);
-			
-			g_byte_array_free (f, TRUE);			
-		}
-	else
-		{
-			retval = NULL;
-		}
-
-	g_free(base_uri);
-
-	return retval;
-}
-
 /* private */
 GdkPixbuf *
 rsvg_pixbuf_from_data_with_size_data (const guchar * buff,
@@ -237,183 +201,6 @@ rsvg_pixbuf_from_file_with_size_data (const gchar * file_name,
 	g_free(base_uri);
 
 	return pixbuf;
-}
-
-/**
- * rsvg_pixbuf_from_file_at_size_ex:
- * @handle: The RSVG handle you wish to render with (either normal or gzipped)
- * @file_name: A file name
- * @width: The new width, or -1
- * @height: The new height, or -1
- * @error: return location for errors
- * 
- * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
- * from the size indicated to the new size indicated by @width and @height.  If
- * either of these are -1, then the default size of the image being loaded is
- * used.  The caller must assume the reference to the returned pixbuf. If an
- * error occurred, @error is set and %NULL is returned. Returned handle is closed
- * by this call and must be freed by the caller.
- * 
- * Return value: A newly allocated #GdkPixbuf, or %NULL
- *
- * Since: 2.4
- */
-GdkPixbuf  *
-rsvg_pixbuf_from_file_at_size_ex (RsvgHandle * handle,
-								  const gchar  *file_name,
-								  gint          width,
-								  gint          height,
-								  GError      **error)
-{
-	struct RsvgSizeCallbackData data;
-	
-	data.type = RSVG_SIZE_WH;
-	data.width = width;
-	data.height = height;
-	data.keep_aspect_ratio = FALSE;
-	
-	return rsvg_pixbuf_from_file_with_size_data_ex (handle, file_name, &data, error);
-}
-
-/**
- * rsvg_pixbuf_from_file_ex:
- * @handle: The RSVG handle you wish to render with (either normal or gzipped)
- * @file_name: A file name
- * @error: return location for errors
- * 
- * Loads a new #GdkPixbuf from @file_name and returns it.  The caller must
- * assume the reference to the reurned pixbuf. If an error occurred, @error is
- * set and %NULL is returned. Returned handle is closed by this call and must be
- * freed by the caller.
- * 
- * Return value: A newly allocated #GdkPixbuf, or %NULL
- *
- * Since: 2.4
- */
-GdkPixbuf  *
-rsvg_pixbuf_from_file_ex (RsvgHandle * handle,
-						  const gchar  *file_name,
-						  GError      **error)
-{
-	return rsvg_pixbuf_from_file_at_size_ex (handle, file_name, -1, -1, error);
-}
-
-/**
- * rsvg_pixbuf_from_file_at_zoom_ex:
- * @handle: The RSVG handle you wish to render with (either normal or gzipped)
- * @file_name: A file name
- * @x_zoom: The horizontal zoom factor
- * @y_zoom: The vertical zoom factor
- * @error: return location for errors
- * 
- * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
- * from the size indicated by the file by a factor of @x_zoom and @y_zoom.  The
- * caller must assume the reference to the returned pixbuf. If an error
- * occurred, @error is set and %NULL is returned. Returned handle is closed by this 
- * call and must be freed by the caller.
- * 
- * Return value: A newly allocated #GdkPixbuf, or %NULL
- *
- * Since: 2.4
- */
-GdkPixbuf  *
-rsvg_pixbuf_from_file_at_zoom_ex (RsvgHandle * handle,
-								  const gchar  *file_name,
-								  double        x_zoom,
-								  double        y_zoom,
-								  GError      **error)
-{
-	struct RsvgSizeCallbackData data;
-	
-	g_return_val_if_fail (file_name != NULL, NULL);
-	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
-	
-	data.type = RSVG_SIZE_ZOOM;
-	data.x_zoom = x_zoom;
-	data.y_zoom = y_zoom;
-	data.keep_aspect_ratio = FALSE;
-	
-	return rsvg_pixbuf_from_file_with_size_data_ex (handle, file_name, &data, error);
-}
-
-/**
- * rsvg_pixbuf_from_file_at_max_size_ex:
- * @handle: The RSVG handle you wish to render with (either normal or gzipped)
- * @file_name: A file name
- * @max_width: The requested max width
- * @max_height: The requested max heigh
- * @error: return location for errors
- * 
- * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is uniformly
- * scaled so that the it fits into a rectangle of size max_width * max_height. The
- * caller must assume the reference to the returned pixbuf. If an error occurred,
- * @error is set and %NULL is returned. Returned handle is closed by this call and 
- * must be freed by the caller.
- * 
- * Return value: A newly allocated #GdkPixbuf, or %NULL
- *
- * Since: 2.4
- */
-GdkPixbuf  *
-rsvg_pixbuf_from_file_at_max_size_ex (RsvgHandle * handle,
-									  const gchar  *file_name,
-									  gint          max_width,
-									  gint          max_height,
-									  GError      **error)
-{
-	struct RsvgSizeCallbackData data;
-	
-	data.type = RSVG_SIZE_WH_MAX;
-	data.width = max_width;
-	data.height = max_height;
-	data.keep_aspect_ratio = FALSE;
-	
-	return rsvg_pixbuf_from_file_with_size_data_ex (handle, file_name, &data, error);
-}
-
-/**
- * rsvg_pixbuf_from_file_at_zoom_with_max_ex:
- * @handle: The RSVG handle you wish to render with (either normal or gzipped)
- * @file_name: A file name
- * @x_zoom: The horizontal zoom factor
- * @y_zoom: The vertical zoom factor
- * @max_width: The requested max width
- * @max_height: The requested max heigh
- * @error: return location for errors
- * 
- * Loads a new #GdkPixbuf from @file_name and returns it.  This pixbuf is scaled
- * from the size indicated by the file by a factor of @x_zoom and @y_zoom. If the
- * resulting pixbuf would be larger than max_width/max_heigh it is uniformly scaled
- * down to fit in that rectangle. The caller must assume the reference to the
- * returned pixbuf. If an error occurred, @error is set and %NULL is returned.
- * Returned handle is closed by this call and must be freed by the caller.
- * 
- * Return value: A newly allocated #GdkPixbuf, or %NULL
- *
- * Since: 2.4
- */
-GdkPixbuf  *
-rsvg_pixbuf_from_file_at_zoom_with_max_ex (RsvgHandle * handle,
-										   const gchar  *file_name,
-										   double        x_zoom,
-										   double        y_zoom,
-										   gint          max_width,
-										   gint          max_height,
-										   GError      **error)
-{
-	struct RsvgSizeCallbackData data;
-	
-	g_return_val_if_fail (file_name != NULL, NULL);
-	g_return_val_if_fail (x_zoom > 0.0 && y_zoom > 0.0, NULL);
-	
-	data.type = RSVG_SIZE_ZOOM_MAX;
-	data.x_zoom = x_zoom;
-	data.y_zoom = y_zoom;
-	data.width = max_width;
-	data.height = max_height;
-	data.keep_aspect_ratio = FALSE;
-	
-	return rsvg_pixbuf_from_file_with_size_data_ex (handle, file_name, &data, error);
 }
 
 /**
